# cmake-doxytag

./: Doxytag.cmake  LICENSE  README.md
test/common/: DemoSettings.cmake
test/inter_project/: build.sh
test/inter_project/project_a/: CMakeLists.txt
test/inter_project/project_b/: CMakeLists.txt
test/inter_project/project_b/include/: LibB.h
test/inter_project/project_b/src/: LibB.c
test/intra_project/: CMakeLists.txt  build.sh
test/intra_project/project_a/: CMakeLists.txt  ProjectAConfig.cmake.in
test/intra_project/project_a/include/: LibA.h
test/intra_project/project_a/src/: LibA.c
test/intra_project/project_b/: CMakeLists.txt  ProjectBConfig.cmake.in
test/intra_project/project_b/src/: ExecB.c
